--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,6 @@ jobs:
       matrix:
         platform: [ ubuntu-16.04, ubuntu-latest, macos-latest, windows-latest ]
         ruby: [ 2.5, 2.6, 2.7 ]
-        # TODO: Remove this exclusion once Nokogiri is supported on ruby 2.7 for Windows
-        exclude:
-          - platform: windows-latest
-            ruby: 2.7
     runs-on: ${{ matrix.platform }}
 
     steps:
@@ -35,8 +31,8 @@ jobs:
         run: gem install bundler git-lite-version-bump
       - name: Run bundle install
         run: bundle install
-      - name: Run rake test
-        run: bundle exec rake test
+      - name: Run rake unit tests
+        run: bundle exec rake unit
       - name: Run bundle-audit
         run: bundle-audit check --update
       - name: Build inspec-reporter-json-hdf gem
@@ -48,8 +44,10 @@ jobs:
         env:
           CHEF_LICENSE: "accept"
       - name: Generate attestation file
-        run: sh generate_attestation_file.sh
-      - name: List files
-        run: ls -alh
-
-
+        run: ruby generate_attestation_file.rb
+      - name: Run inspec with attestations
+        run: inspec exec test/test-profile/ --reporter hdf:test_hdf.json --config attestations.json
+        env:
+          CHEF_LICENSE: "accept"
+      - name: Run rake functional tests
+        run: bundle exec rake functional
