--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ ubuntu-16.04, ubuntu-latest, macos-10.15, windows-latest ]
-        ruby: [ 2.7, 3.0, 3.1 ]
+        platform: [ ubuntu-latest, macos-10.15, windows-latest ]
+        ruby: [ 2.7 ]
     runs-on: ${{ matrix.platform }}
 
     steps:
